# mdm_api

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yaml  entrypoint.sh  pyproject.toml
infra/: nginx.conf
src/: main.py
src/api/: routers.py
src/api/dependencies/: devices.py  ws.py
src/api/endpoints/: devices.py  ws.py
src/core/: config.py  constants.py  enums.py  exceptions.py  logging.py  repositories.py  services.py
src/domain/exceptions/: devices.py
src/domain/models/: devices.py
src/domain/repositories/: devices.py
src/domain/schemas/: devices.py
src/domain/services/: devices.py
src/infrastructure/db/: dependencies.py  meta.py  orm.py
src/migrations/: env.py
src/migrations/versions/: 2025_02_11_1505-4efda89613df_init.py  2025_02_11_1555-60a2675ac034_upddefaultdevicetype.py
